Use new path class in IdRefTokenSequenceProvider